jtreg-kryoptic.sh: Update to jdk 25 and jtreg 8+2